# VINS-Fusion-Vehicle

./: CMakeLists.txt  README.md
camera_models/src/camera_models/: PinholeCamera.cc  PinholeFullCamera.cc
config/: vins_rviz_config.rviz
config/realsense/: realsense_depth_imu_config.yaml  realsense_depth_imu_config_d435i.yaml  realsense_depth_imu_config_d435i_location.yaml  realsense_depth_imu_config_d435i_old.yaml
loop_fusion/launch/: loop_fusion_location.launch
loop_fusion/src/: keyframe.cpp  keyframe.h  parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
support_files/grid_mapping/: CMakeLists.txt  main.cpp
vins_estimator/launch/: octomap.launch  octomap_vins.launch  vins_d435i_map.launch  vins_loop.launch
vins_estimator/src/: rosNodeTest.cpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: imu_factor.h  integration_base.h
vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
vins_estimator/src/utility/: visualization.cpp
